dark mode fix

--- a/codesite/python_problems/static/python_problems/style.css
+++ b/codesite/python_problems/static/python_problems/style.css
@@ -5,5 +5,7 @@
 
 .problem-container a {
   margin-right: 0px; /* Add some space between the title and the tags */
+  color: green;
+  background-color: brown;
 }
 
